--- a/2homework.html
+++ b/2homework.html
@@ -214,7 +214,7 @@
 
         #img {
             background-image: url(https://letsenhance.io/static/8f5e523ee6b2479e26ecc91b9c25261e/1015f/MainAfter.jpg);
-            background-size: cover;
+            background-size: 100% 100%;
 
         }
         #GalleryContainer{
